# rust-crud-app

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/db/: connection.rs
src/graphql/: mod.rs  mutation_root.rs  query_root.rs  schema.rs
