[package]
name = "rust-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 dotenv = "0.15.0"
 async-graphql = "7.0.3"
 async-graphql-axum = "7.0.3"
 tokio-postgres = "0.7.2"
 tokio = { version = "1", features = ["full"] }
 axum = "0.7.5"
 axum-macros = "0.4.1"
 sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres" ] }
 

